--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,72 @@ body {
 .btn-yellow span:nth-child(4) {
   --n: 4; }
 
+@media (min-width: 768px) {
+  /* show 3 items */
+  .carousel-inner .active,
+  .carousel-inner .active + .carousel-item,
+  .carousel-inner .active + .carousel-item + .carousel-item {
+    display: block; }
+  .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),
+  .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item,
+  .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item {
+    transition: none; }
+  .carousel-inner .carousel-item-next,
+  .carousel-inner .carousel-item-prev {
+    position: relative;
+    transform: translate3d(0, 0, 0); }
+  .carousel-inner .active.carousel-item + .carousel-item + .carousel-item + .carousel-item {
+    position: absolute;
+    top: 0;
+    right: -33.3333%;
+    z-index: -1;
+    display: block;
+    visibility: visible; }
+  /* left or forward direction */
+  .active.carousel-item-left + .carousel-item-next.carousel-item-left,
+  .carousel-item-next.carousel-item-left + .carousel-item,
+  .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item,
+  .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item {
+    position: relative;
+    transform: translate3d(-100%, 0, 0);
+    visibility: visible; }
+  /* farthest right hidden item must be abso position for animations */
+  .carousel-inner .carousel-item-prev.carousel-item-right {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    display: block;
+    visibility: visible; }
+  /* right or prev direction */
+  .active.carousel-item-right + .carousel-item-prev.carousel-item-right,
+  .carousel-item-prev.carousel-item-right + .carousel-item,
+  .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item,
+  .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item {
+    position: relative;
+    transform: translate3d(100%, 0, 0);
+    visibility: visible;
+    display: block;
+    visibility: visible; } }
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 100px;
+  width: 100px;
+  background-size: 100%, 100%;
+  border-radius: 50%;
+  background-image: none; }
+
+.carousel-control-next-icon:after {
+  content: '>';
+  font-size: 55px;
+  color: #2c7873; }
+
+.carousel-control-prev-icon:after {
+  content: '<';
+  font-size: 55px;
+  color: #2c7873; }
+
 .portfolio-experiment {
   background: transparent; }
   .portfolio-experiment a {
@@ -273,6 +339,54 @@ body {
 
 .fadeInUp {
   animation-delay: 1.3s; }
+
+.cardic {
+  font-size: 1.6rem;
+  width: auto;
+  margin: 5rem 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  @media only screen and (max-width: 56.25em) {
+    .cardic {
+      flex-direction: column;
+      margin: 3rem 1rem; } }
+  @media only screen and (max-width: 56.25em) {
+    .cardic__reverse {
+      flex-direction: column-reverse; } }
+  .cardic-image {
+    width: 80%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    @media only screen and (max-width: 37.5em) {
+      .cardic-image {
+        width: 100%; } }
+    .cardic-image img {
+      width: 100%;
+      height: 30rem;
+      border-radius: 0.4rem; }
+  .cardic-content {
+    width: 80%;
+    line-height: 2rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center; }
+    @media only screen and (max-width: 37.5em) {
+      .cardic-content {
+        width: 100%; } }
+    .cardic-content .heading-2 {
+      align-self: center;
+      padding: 1rem 0;
+      font-weight: bold; }
+
+.card .card-content p {
+  margin-bottom: 2rem; }
+
+.news {
+  padding-top: 10rem; }
 
 .footer {
   padding: 4rem 0; }
