--- a/css/style.css
+++ b/css/style.css
@@ -55,12 +55,13 @@ body {
 .heading-1 {
   text-align: center;
   letter-spacing: 1rem;
-  margin: 1rem 0;
+  margin: 1rem 0 1rem 5rem;
   padding: 3rem 0;
   transition: all .3s;
-  font-weight: bold; }
+  font-weight: bold;
+  border-left: 3px solid #2c7873; }
   .heading-1:hover {
-    text-shadow: 0 0 20px rgba(19, 18, 18, 0.877); }
+    transform: scale(1.04) translateY(-5px); }
 
 .btn-container {
   height: 100%;
@@ -117,6 +118,17 @@ body {
 
 .btn-yellow span:nth-child(4) {
   --n: 4; }
+
+#btn-form {
+  color: #000;
+  border: 3px solid #000; }
+  #btn-form span {
+    background-color: #000; }
+  #btn-form:hover {
+    color: #ffd800; }
+
+.section-product {
+  margin-bottom: 8rem; }
 
 @media (min-width: 768px) {
   /* show 3 items */
@@ -307,7 +319,8 @@ body {
   height: 100vh;
   display: flex;
   align-items: center;
-  color: #fff; }
+  color: #fff;
+  margin-bottom: 3rem; }
 
 .fullscreen-video-wrap {
   position: absolute;
@@ -400,13 +413,179 @@ body {
     .cardic-content .heading-2 {
       align-self: center;
       padding: 1rem 0;
-      font-weight: bold; }
+      font-weight: bold;
+      transition: all .3s; }
+      .cardic-content .heading-2:hover {
+        transform: scale(1.04) translateY(-5px); }
 
 .card .card-content p {
   margin-bottom: 2rem; }
 
 .news {
   padding-top: 10rem; }
+
+/*.section-contact {
+    margin-bottom: 5rem;
+}
+
+#map {
+    height: 30rem;
+    width: 100%;
+}
+
+.adress {
+    display: flex;
+    flex-direction: column;
+  
+
+    
+
+    &-map {
+        padding: 1.5rem;
+        border-radius: 5px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.555);
+        backface-visibility: hidden;
+        transition: all .5s;
+        margin-bottom: 2rem;
+        &:hover {
+            transform: scale(1.03);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.555);
+        }
+    }
+
+    &-content {
+        padding: 1.5rem;
+        border-radius: 5px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.555);
+        backface-visibility: hidden;
+        transition: all .5s;
+        &:hover {
+            transform: scale(1.03);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.555);
+        }
+    
+        &_item{
+            display: block;
+            padding: 2rem;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            font-size: 1.8rem;
+
+            i {
+                padding-right: 1rem;
+                font-size: 2rem;
+                color: $dark-green;
+            }
+        }
+    }
+}
+
+*/
+.v-contact {
+  margin-top: 3rem;
+  height: 60vh;
+  display: flex;
+  align-items: center;
+  color: #fff;
+  position: relative;
+  display: block; }
+  @media only screen and (max-width: 56.25em) {
+    .v-contact {
+      height: 100%; } }
+
+.contact-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80vh;
+  overflow: hidden;
+  object-fit: contain; }
+  @media only screen and (max-width: 56.25em) {
+    .contact-background {
+      height: 100%; } }
+
+.contact-background video {
+  min-height: 100%;
+  min-width: 100%;
+  background-attachment: fixed; }
+  @media only screen and (max-width: 56.25em) {
+    .contact-background video {
+      display: none;
+      height: 100%; } }
+
+.contact-overlay {
+  height: 80vh;
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+  object-fit: cover; }
+  @media only screen and (max-width: 56.25em) {
+    .contact-overlay {
+      height: 100%; } }
+
+/*FORM*/
+.form__group:not(:last-child) {
+  margin-bottom: 0rem; }
+
+.form__input, .form__textarea {
+  border: none;
+  outline: none;
+  width: 90%;
+  padding: 2rem;
+  background-color: #fff;
+  border-bottom: 3px solid transparent;
+  border-radius: 2px;
+  font-family: inherit;
+  font-size: 1.5rem;
+  font-weight: 700;
+  display: block;
+  transition: all .2s; }
+  @media only screen and (max-width: 56.25em) {
+    .form__input, .form__textarea {
+      width: 80%;
+      margin: 0 auto; } }
+  .form__input__textarea, .form__textarea__textarea {
+    height: 10rem; }
+  .form__input:focus, .form__textarea:focus {
+    border-bottom: 3px solid blue;
+    box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); }
+  .form__input:focus:invalid, .form__textarea:focus:invalid {
+    border-bottom: 3px solid red; }
+
+.form__label {
+  padding: 0 2rem;
+  font-size: 1.3rem;
+  font-weight: 700;
+  transition: all .2s;
+  display: block; }
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  transform: translateY(-3rem); }
+
+.book {
+  background: linear-gradient(105deg, rgba(255, 216, 0, 0.85) 0%, rgba(255, 240, 154, 0.85) 50%, transparent 66%);
+  background-size: 100%;
+  background-size: cover;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.8);
+  height: 80vh; }
+  @media only screen and (max-width: 56.25em) {
+    .book {
+      height: 100%; } }
+  @media only screen and (max-width: 56.25em) {
+    .book {
+      background: #ffd800; } }
+  .book__form {
+    width: 50%;
+    padding: 2rem; }
+    @media only screen and (max-width: 56.25em) {
+      .book__form {
+        width: 100%; } }
 
 .footer {
   padding: 4rem 0; }
