--- a/sass/component/_button.scss
+++ b/sass/component/_button.scss
@@ -66,3 +66,16 @@
 .btn-yellow span:nth-child(4) {
     --n: 4;
 }
+
+
+#btn-form {
+    color: $black;
+    border: 3px solid $black;
+
+    & span {
+        background-color: $black;
+    }
+    &:hover {
+        color: $yellow;
+    }
+}
