--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -47,6 +47,10 @@
                 align-self: center;
                 padding: 1rem 0;
                 font-weight: bold;
+                transition: all .3s;
+                &:hover {
+                    transform: scale(1.04) translateY(-5px);
+                }
             }
         }
 
