--- a/css/style.css
+++ b/css/style.css
@@ -302,7 +302,7 @@ body {
   font-family: inherit;
   background-color: transparent; }
   .navbar img {
-    height: 100%; }
+    height: 40px; }
   .navbar-links a {
     list-style: none;
     text-decoration: none;
