--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -1,63 +1,3 @@
-/*.section-contact {
-    margin-bottom: 5rem;
-}
-
-#map {
-    height: 30rem;
-    width: 100%;
-}
-
-.adress {
-    display: flex;
-    flex-direction: column;
-  
-
-    
-
-    &-map {
-        padding: 1.5rem;
-        border-radius: 5px;
-        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.555);
-        backface-visibility: hidden;
-        transition: all .5s;
-        margin-bottom: 2rem;
-        &:hover {
-            transform: scale(1.03);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.555);
-        }
-    }
-
-    &-content {
-        padding: 1.5rem;
-        border-radius: 5px;
-        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.555);
-        backface-visibility: hidden;
-        transition: all .5s;
-        &:hover {
-            transform: scale(1.03);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.555);
-        }
-    
-        &_item{
-            display: block;
-            padding: 2rem;
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-            font-size: 1.8rem;
-
-            i {
-                padding-right: 1rem;
-                font-size: 2rem;
-                color: $dark-green;
-            }
-        }
-    }
-}
-
-*/
-
-
 .v-contact{
     margin-top: 3rem;
     height:60vh;
@@ -193,7 +133,7 @@
     }
     &__form {
         width:50%;
-        padding: 2rem;
+        padding: 6rem 2rem 2rem 2rem;
 
         @include respond(tab-port){
             width: 100%;
