--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,127 +1,69 @@
-.footer {
-    padding: 4rem 0;
-}
+.section-footer {
+    margin-top: 13rem;
+    background-color: #333;
+    color: $white;
+    padding-top: 3rem;
+    text-align: center;
+    font-size: 1.4rem;
 
-.footer-list {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    padding-bottom: 8rem;
-    @include respond(phone) { 
-        
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding-bottom: 3rem;
+
+    * > a {
+        text-decoration: none;
+        color: $white;
+        padding: 1rem;
     }
 
-    &__section {
-        @include respond(phone) { 
-            padding-bottom: 2rem;
-        }
-        p {
-            padding-bottom: 1rem;
-            font-size: 1.4rem;
-            color: $dark-blue;
-           
-        }
-        h6 {
-            padding-bottom: 1.5rem;
-            @include respond(phone) { 
-                text-align: center;
-            }
-          
-        }
-
-       
-        &--items {
-            list-style: none;
-            padding: 1rem 0;
-            @include respond(phone) { 
-                padding-top: 0.4rem;
-                text-align: center;
-            }
-           
-            a {
-                text-decoration: none;
-                font-size: 1.4rem;
-                color: $dark-blue;
-            }
-            
-        } 
-          .form {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                input {
-                    width: 25rem;
-                    height: 4.8rem;
-                    background-color: $light-green;
-                    border: none;
-                    outline: none;
-                    color: $dark-blue;
-                    font-size: 1.4rem;
-
-                    &::placeholder {
-                        padding-left: 2rem;
-                        color: $dark-blue;
-                        font-size: 1.4rem;
-                        font-weight: 300;
-                    }
-                }
-          }
-    }
-}
-
-// Footer Nav
-
-.footer-nav {
-    border-top: 1px solid black;
-
-}
-.fnav {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    padding: 3rem 0 6rem 0; 
-    @include respond(tab-port) { 
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    &-social .fnav-items__link {
-        display: inline-block;
-    }
-
-    &-items__link {
+    * > li {
         list-style: none;
-        display: inline-block;
-        color: $dark-blue;
-        font-size: 1.4rem;
-        @include respond(tab-port) { 
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            padding: 1rem;
-            text-align: center;
-        }
 
-        a {
-            color: $dark-blue;
-            font-size: 1.4rem;  
-            padding: 0 1rem;
+    }
+
+    * > i {
+        font-size: 2rem;
+    }
+        .footer-nav {
+
+            &_link {
+            
+                padding: 0.5rem;
+                cursor: pointer; 
+            }
+        }
+}
+
+
+.adress-content {
+
+    ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    &_item {
+        padding: 0.5rem;
+
+        i {
+            padding-right: 1rem;
         }
     }
 }
 
-///icon
-.fab {
-    width: 2.4rem;
-    height: 2.4rem;
+.footer-social {
+    ul {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        li {
+            padding: 1rem;
+        }
+    }
 }
+
+.footer-img {
+    height: 5rem;
+    width: 50%;
+    padding-bottom: 1rem;
+}
+
