--- a/sass/component/_navbar.scss
+++ b/sass/component/_navbar.scss
@@ -9,9 +9,12 @@
     font-size: 1.6rem;
     font-family: inherit;
     background-color: transparent;
+    @include respond(tab-port) {
+        display:none;
+    }
 
     img {
-        height: 40px;
+        height: 5rem;
     }
 
     &-links {
@@ -33,3 +36,4 @@
     }
 
 }
+
