--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 
 @import "component/button";
 @import "component/carousel";
+@import "component/hamburger";
 @import "component/link";
 @import "component/navbar";
 @import "component/video";
