--- a/sass/component/_video.scss
+++ b/sass/component/_video.scss
@@ -5,7 +5,7 @@
     color:#fff;
     margin-bottom: 3rem;
   }
-  
+
   
   .fullscreen-video-wrap{
     position:absolute;
@@ -30,15 +30,17 @@
     top:0;
     left:0;
     width:100%;
-    z-index:1;
+    z-index:0;
     background:rgba(#000, $alpha: .5);
     object-fit: cover;
   
   }
-  
+  .mobile-nav {
+    z-index: 9999 !important;
+}
   .header-content{
     font-family: 'Caveat', cursive;
-    z-index:2;
+    z-index:10;
     text-align: center;
     position: absolute;
     top:50%;
