--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ ORDER: Base + typography > general layout + grid > page layout > components
   box-sizing: border-box; }
 
 html {
+  scroll-behavior: smooth;
   font-size: 62.5%; }
   @media only screen and (max-width: 75em) {
     html {
@@ -221,11 +222,30 @@ body {
  * production code, beware of the browser
  * prefixes.
  */
+.sticky {
+  display: none;
+  height: 8rem;
+  width: 100%;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0; }
+  @media only screen and (max-width: 56.25em) {
+    .sticky {
+      display: flex;
+      justify-content: space-between;
+      align-items: center; } }
+  .sticky img {
+    position: fixed;
+    height: 5rem;
+    top: 1.5rem;
+    right: 30px; }
+
 #menuToggle {
   display: none;
   position: fixed;
-  top: 50px;
-  left: 50px; }
+  top: 2rem;
+  left: 30px; }
   @media only screen and (max-width: 56.25em) {
     #menuToggle {
       display: block; } }
@@ -261,7 +281,7 @@ body {
   height: 4px;
   margin-bottom: 5px;
   position: relative;
-  background: #cdcdcd;
+  background: #000;
   border-radius: 3px;
   z-index: 1;
   transform-origin: 4px 0px;
@@ -305,7 +325,7 @@ body {
   margin: -100px 0 0 -50px;
   padding: 50px;
   padding-top: 125px;
-  background: #ededed;
+  background: #fff;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   /* to stop flickering of text in safari */
