--- a/sass/component/_hamburger.scss
+++ b/sass/component/_hamburger.scss
@@ -9,13 +9,33 @@
  * prefixes.
  */
 
+.sticky{
+    display: none;
+    height: 8rem;
+    width: 100%;
+    background-color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    @include respond(tab-port) {
+        display:flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 
+    img {
+        position: fixed;
+        height: 5rem;
+        top: 1.5rem;
+        right: 30px;
+    }
+}
 
 #menuToggle {
   display: none;
   position: fixed;
-  top: 50px;
-  left: 50px;
+  top: 2rem;
+  left: 30px;
   @include respond(tab-port) {
     display:block;
 }
@@ -65,7 +85,7 @@
   margin-bottom: 5px;
   position: relative;
   
-  background: #cdcdcd;
+  background: $black;
   border-radius: 3px;
   
   z-index: 1;
@@ -127,7 +147,7 @@
   padding: 50px;
   padding-top: 125px;
   
-  background: #ededed;
+  background: $white;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   /* to stop flickering of text in safari */
