--- a/css/style.css
+++ b/css/style.css
@@ -686,10 +686,13 @@ body {
   .section-footer * > li {
     list-style: none; }
   .section-footer * > i {
-    font-size: 2rem; }
+    font-size: 2.2rem; }
   .section-footer .footer-nav_link {
     padding: 0.5rem;
     cursor: pointer; }
+    .section-footer .footer-nav_link a:hover {
+      color: #ffd800;
+      transition: all .5s; }
 
 .adress-content ul {
   display: flex;
@@ -713,6 +716,32 @@ body {
   height: 5rem;
   width: 50%;
   padding-bottom: 1rem; }
+  @media only screen and (max-width: 56.25em) {
+    .footer-img {
+      height: 5rem;
+      width: auto; } }
+
+.fab {
+  transition: all .3s; }
+
+.fa-facebook-f:hover {
+  color: #3b5998; }
+
+.fa-twitter:hover {
+  color: #38A1F3; }
+
+.fa-instagram:hover {
+  color: #E1306C; }
+
+.ubden-cont {
+  backface-visibility: hidden; }
+
+.ubden:hover {
+  transition: all .5s;
+  display: inline-block;
+  transform: scale(1.1) skewY(4deg);
+  color: white;
+  background-color: black; }
 
 .row {
   max-width: 114rem;
