--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -19,7 +19,7 @@
     }
 
     * > i {
-        font-size: 2rem;
+        font-size: 2.2rem;
     }
         .footer-nav {
 
@@ -27,6 +27,11 @@
             
                 padding: 0.5rem;
                 cursor: pointer; 
+
+                a:hover {
+                    color: $yellow;
+                    transition: all .5s;
+                    }
             }
         }
 }
@@ -57,6 +62,7 @@
 
         li {
             padding: 1rem;
+
         }
     }
 }
@@ -65,5 +71,37 @@
     height: 5rem;
     width: 50%;
     padding-bottom: 1rem;
+
+    @include respond(tab-port) { 
+        height: 5rem;
+        width: auto;
+
+    }
+
 }
 
+.fab {
+    transition: all .3s
+}
+
+.fa-facebook-f:hover {
+    color: #3b5998;
+}
+.fa-twitter:hover {
+    color: #38A1F3;
+}
+.fa-instagram:hover {
+    color: #E1306C;
+}
+
+.ubden-cont {
+    backface-visibility: hidden;
+}
+
+.ubden:hover {
+    transition: all .5s;
+    display: inline-block;
+    transform: scale(1.1) skewY(4deg);
+    color: white;
+    background-color: black;
+}
