--- a/sass/component/_navbar.scss
+++ b/sass/component/_navbar.scss
@@ -1,40 +1,77 @@
-.navbar {
-    height:6.6rem;
-    width: 100%;
-    display: block;
-    padding: 2rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 1.6rem;
-    font-family: inherit;
-    background-color: transparent;
-    @include respond(tab-port) {
-        display:none;
-    }
-
-    img {
-        height: 5rem;
-    }
-
-    &-links {
-        a {
-            list-style: none;
-            text-decoration: none;
-            color: $white;
-            font-weight: bold;
-            text-transform: uppercase;
-            transition: all 2s;
-
-        }
-
-        &_item {
-            list-style: none;
-            display: inline-block;
-            padding: 0 2rem;
-        }
-    }
-
+.nav-container {
+  background: white;
 }
 
+.navbar {
+  background-color: #fff;
+  height: 9.6rem;
+  margin: 0 auto;
+  width: 112.8rem;
+  display: grid;
+  grid-template-columns: repeat(12, 7.2rem);
+  grid-gap: 2.4rem;
+}
 
+.logo-container {
+  grid-column: 1 / 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.navlist {
+  grid-column: 3 / 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &-container {
+    list-style: none;
+
+    .navlist-item {
+      display: inline-block;
+      margin-right: 4.8rem;
+      a {
+        text-decoration: none;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 1.6rem;
+        /* identical to box height */
+        display: flex;
+        align-items: center;
+        color: #042560;
+      }
+    }
+  }
+}
+
+.user {
+  grid-column: 10/ 13;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  &-img {
+    width: 3.2rem;
+    height: auto;
+  }
+
+  &-name {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1.6rem;
+    line-height: 150%;
+    color: #042560;
+    margin-left: 1.6rem;
+  }
+
+  &-arr {
+      background: url(../../img/arrow-down.svg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      width: .9rem;
+      height: .5rem;
+      margin-left: 1.2rem;
+  }
+}
