--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,36 +11,21 @@ html {
     scroll-behavior: smooth;
   
     font-size: 62.5%; //1 rem = 10px;
-
-    @include respond(tab-land) { // width < 1200?
-        font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
-    }
-
-    @include respond(tab-port) { // width < 900?
-        font-size: 50%; //1 rem = 8px, 8/16 = 50%
-    }
-    
-    @include respond(big-desktop) {
-        font-size: 75%; //1rem = 12, 12/16
-    }
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'DM Sans', sans-serif;
+    width: 100%;
+    background-color:#F1F3F9;
 }
 
-.wrapper {
-    display: grid;
-    grid-template-rows: 100vh;
-}
 
-#container{
-    width: 80%;
+.container {
     margin: 0 auto;
-    @include respond(tab-port) { // width < 900?
-        width: 90%;
-    }
-    @include respond(phone) { // width < 900?
-        width: 100%;
-    }
+    width: 112.8rem;
+    display: grid;
+    grid-template-columns: repeat(12, 7.2rem);
+    grid-template-rows: 20.6rem 1fr;
+    grid-gap: 0 2.4rem;
+
 }
